ikiwiki (2.60) UNRELEASED; urgency=low
 
  * Add getsetup hook, all plugins that add fields to %config should use it.
  * ikiwiki --dumpsetup can generate a nice setup file snapshotting ikiwiki's
    current configuration.
 
 -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400

ikiwiki (2.55) UNRELEASED; urgency=low

  * remove: New plugin that adds the ability to remove pages via the web.
    (Sponsored by The TOVA Company.)
  * rename: New plugin that adds the ability to rename pages via the web.
    (Sponsored by The TOVA Company.) (This one's for you, Kyle.)
  * All rcs backends need to implement rcs_remove, rcs_commitstaged,
    and rcs_rename. (Done for svn, git).
  * This version adds renamepage hooks, which can be used to modify page content,
    including links, during renames.
  * prefix_directives enabled in doc wiki, all preprocessor directives
    converted. (Simon McVittie)
  * editpage: Don't show attachments link when attachments are disabled.
  * tag: Allow tagbase to be overridden by starting a tag with "./" or "/".
    (Simon McVittie)
  * Really fix bug with links to pages with names containing colons. 
    Previous fix mised a few cases.
  * Avoid troublesome abs_path calls in wrapper setup.
  * Add allow_symlinks_before_srcdir config setting that can be used to avoid
    a security check that is a good safe default, but problimatic overkill in
    some situations.
  * Don't allow uploading an attachment with the same name as an existing
    page, to avoid confusion.
  * Split out error messages from editpage.tmpl into several separate
    templates.
  * attachment: Do not escape _ when determining attachment filenames.
  * Rebuild pages that change their type. (Gabriel McManus)
  * monotone: Add support for rename, delete, and also diff. (William Uther)
  * toggle: Fix incompatability between javascript and webkit.
  * bzr: Add support for rename and delete. (Jelmer Vernooij)