@@ -3,6 +3,8 @@ ikiwiki (2.60) UNRELEASED; urgency=low
   * Add getsetup hook, all plugins that add fields to %config should use it.
   * ikiwiki --dumpsetup can generate a nice setup file snapshotting ikiwiki's
     current configuration.
+  * The way wrappers are defined in the setup file has changed. Old setup
+    files will continue to work, for now.
  
  -- Joey Hess <joeyh@debian.org>  Mon, 21 Jul 2008 11:35:46 -0400
 
